--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   sqflite: any
   path_provider: "^0.3.1"
+  http: "^0.11.3+16"
+
 
 dev_dependencies:
   flutter_test:
