--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   path_provider: "^0.3.1"
   http: "^0.11.3+16"
   url_launcher: ^3.0.3
+  connectivity: ^0.3.1
 
 
 dev_dependencies:
