--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ flutter:
 
 
   assets:
-    - assets/
+    - assets/sampleData.json
+    - assets/rand.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
