--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   connectivity: ^0.3.1
+  firebase_messaging: ^1.0.5
   font_awesome_flutter: ^7.1.0
   http: "^0.11.3+16"
   path_provider: "^0.3.1"
